fix: поправил gap и width у карточек

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -3,11 +3,11 @@
   margin: 0 auto;
   padding: 0;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: repeat(auto-fit, 1fr);
   grid-column-gap: 18px;
-  grid-row-gap: 20px;
+  grid-row-gap: 21px;
   justify-content: center;
-  width: calc(100% - 31%);
+  max-width: 882px;
 }
 
 @media screen and (max-width: 1100px) {
